overlay: Enable torch quicksettings tile
Change-Id: Ibc2051927dddb45fd2b14f0f79f14d8bdaa9b543

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -245,4 +245,7 @@
         <item>0</item>
     </integer-array>
 
+    <!-- Device supports LED flashlight -->
+    <bool name="config_enableTorch">true</bool>
+
 </resources>
