overlay/packages/services/Telephony: show cdma while on 3g, prevent using expanded apn and use hfa privisioning
Change-Id: I8818b6bc15fb05a73faa9390ec61865398965365

--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -22,8 +22,15 @@
     <!-- Flag indicating if the tty is enabled -->
 
     <bool name="tty_enabled">true</bool>
-
+    <!-- Configure certain GsmUmtsOptions to be available or not. The
+         default values are in Phone/res/values/config.xml and maybe overridden
+         in operator specific resource directories or device specific overlays. -->
+    <bool name="config_apn_expand" translatable="false">false</bool>
     <!-- Show enabled lte option for lte device -->
     <bool name="config_enabled_lte" translatable="false">true</bool>
+    <!-- Show cdma auto network mode in (glabal) roaming -->
+    <bool name="config_show_cdma" translatable="false">true</bool>
+    <!-- CDMA activation goes through HFA [DO NOT TRANSLATE] -->
+    <bool name="config_use_hfa_for_provisioning" translatable="false">true</bool>
 
 </resources>
