Add coordinates for smartwindow cover
Change-Id: I6a86c32a5fa8c2a780ebd57218f0084db4bc40f2

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -260,4 +260,12 @@
     <string name="config_perf_profile_default_entry">1</string>
 
     <bool name="config_lidControlsSleep">true</bool>
+
+    <integer-array name="config_smartCoverWindowCoords">
+        <item>55</item>     <!-- Top -->
+        <item>200</item>    <!-- Left -->
+        <item>850</item>    <!-- Bottom -->
+        <item>880</item>    <!-- Right -->
+    </integer-array>
+
 </resources>
