g2: Re-enable proximity check on wake
Change-Id: I06b6868ae849c8275c18c22a6415f4de6da07d44

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -272,7 +272,7 @@
          turn the screen on
          NOTE ! - Enable for devices that have a fast response proximity sensor
     -->
-    <!--bool name="config_proximityCheckOnWake">true</bool>
-    <integer name="config_proximityCheckTimeout">400</integer-->
+    <bool name="config_proximityCheckOnWake">true</bool>
+    <integer name="config_proximityCheckTimeout">400</integer>
 
 </resources>
