--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -129,6 +129,25 @@
        <item>"7,1"</item>
     </string-array>
 
+    <!-- Configure wifi tcp buffersizes in the form:
+         rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max -->
+    <string name="config_wifi_tcp_buffers" translatable="false">4096,221184,3461120,4096,221184,3461120</string>
+
+    <!-- Configure mobile tcp buffer sizes in the form:
+         rat-name:rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max
+         If no value is found for the rat-name in use, the system default will be applied.
+    -->
+    <string-array name="config_mobile_tcp_buffers">
+        <item>edge:4093,26280,704512,4096,16384,110208</item>
+        <item>gprs:4092,8760,704512,4096,8760,110208</item>
+        <item>umts:4094,87380,704512,4096,16384,110208</item>
+        <item>hsdpa:4092,87380,704512,4096,16384,110208</item>
+        <item>hsupa:4092,87380,704512,4096,16384,110208</item>
+        <item>hspa:4092,87380,704512,4096,16384,110208</item>
+        <item>hspap:4092,87380,704512,4096,16384,110208</item>
+        <item>lte:4094,87380,2560000,4096,16384,1220608</item>
+    </string-array>
+
     <!-- Vibrator pattern for feedback about a long screen/key press -->
     <integer-array name="config_longPressVibePattern">
         <item>0</item>
