g2: overlay: Add hardware buttons overlay
* Add hardware buttons overlay to allow buttons menu to appear
* Allow volume keys to wake the device, but hide the option
  (it causes SystemUI to crash otherwise). Volume Rocker wake is
  stupid and useless on the G2.

Change-Id: I84284841b3a500b4f7db0fcb901d2d51f6602450

--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -1,4 +1,4 @@
 <resources>
   <bool name="has_led_flash">true</bool>
-  <bool name="config_show_volumeRockerWake">true</bool>
+  <bool name="config_show_volumeRockerWake">false</bool>
 </resources>
